--- a/what.html
+++ b/what.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container-fluid px-5">
-          <a class="navbar-brand text-primary" href="#">harbor</a>
+          <a class="navbar-brand text-primary" href="#"><img class="w-100" src="image/riasat-logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,22 +23,22 @@
            
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="work.html">Work</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="work.html">Work</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-primary" aria-current="page" href="what.html">What We Do</a>
+                      <a class="nav-link text-danger bdr-nav" aria-current="page" href="what.html">What We Do</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="about.html">About</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="Gallery.html">Gallery</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="Gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     </li>
                   </ul>
@@ -169,7 +169,7 @@
                 <div class="screen">
                   <div class="bottom-box">
                     <input class="input" type="text" name="" id="" placeholder="Enter Email">
-                    <button class="search-bar"><a class="text-decoration-none text-light" href="">Subscribe</a></button>
+                    <button class="search-bar bg-danger"><a class="text-decoration-none text-light" href="">Subscribe</a></button>
                   </div>
                 <p class="pt-5">Follow Us</p>
                 <div class="d-flex gap-5 pt-3">
