--- a/Gallery.html
+++ b/Gallery.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">  
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container-fluid px-5">
-          <a class="navbar-brand text-primary" href="#">harbor</a>
+          <a class="navbar-brand text-primary" href="#"><img class="w-100" src="image/riasat-logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,22 +23,22 @@
            
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="work.html">Work</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="work.html">Work</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="what.html">What We Do</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="what.html">What We Do</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="about.html">About</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-primary" aria-current="page" href="Gallery.html">Gallery</a>
+                      <a class="nav-link text-danger bdr-nav" aria-current="page" href="Gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+                      <a class="nav-link hvr-nav" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     </li>
                   </ul>
@@ -48,34 +48,43 @@
        <div>
         <img class="w-100" src="image/hero_1.jpg" alt="">
        </div>
-       <div class="container pt-5 mt-5 pb-5">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="image/hero_1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="image/hero_2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="image/hero_3.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="image/hero_3.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="image/img_4.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
+       <div class="container pt-5">
+        <h1 class="text-secondary">Gallery</h1>
+       </div>
+       <div class="container d-flex flex-wrap wrap gap-4 py-5">
+        <div class="row d-flex">
+          <div class="col-4">
+            <img class="w-100" src="image/1-Room-Kitchen-Se-1-Bedroom-Hall-Kitchen.webp" alt="">
           </div>
-
+          <div class="col-4">
+            <img class="w-100" src="image/1000_F_232696026_KdZ8sKzZoQHDepZ8cJHfKIzfdWiHMKVX.jpg" alt="">
+          </div>
+          <div class="col-4">
+            <img class="w-100" src="image/dvv.jpg" alt="">
+          </div>
+        </div>
+        <div class="row d-flex">
+          <div class="col-4">
+            <img class="w-100" src="image/photo-1556912173-3bb406ef7e77.jpg" alt="">
+          </div>
+          <div class="col-4">
+            <img class="w-100" src="image/istockphoto-521697376-612x612 (1).jpg" alt="">
+          </div>
+          <div class="col-4">
+            <img class="w-100" src="image/hero_2.jpg" alt="">
+          </div>
+        </div>
+        <div class="row d-flex">
+          <div class="col-4">
+            <img class="w-100" src="image/istockphoto-954121580-612x612.jpg" alt="">
+          </div>
+          <div class="col-4">
+            <img class="w-100" src="image/a5c0dc1ef6b649b87406ea0676a71a96.jpg" alt="">
+          </div>
+          <div class="col-4">
+            <img class="w-100" src="image/photo-1556912173-3bb406ef7e77.jpg" alt="">
+          </div>
+        </div>
        </div>
        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -125,7 +134,7 @@
                 <div class="screen">
                   <div class="bottom-box">
                     <input class="input" type="text" name="" id="" placeholder="Enter Email">
-                    <button class="search-bar"><a class="text-decoration-none text-light" href="">Subscribe</a></button>
+                    <button class="search-bar bg-danger"><a class="text-decoration-none text-light" href="">Subscribe</a></button>
                   </div>
                 <p class="pt-5">Follow Us</p>
                 <div class="d-flex gap-5 pt-3">
